// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SWITCH_LAYOUT_SYSTEM switches from flex to pins correctly 1`] = `
Array [
  Object {
    "arbitraryJSBlock": null,
    "isFunction": true,
    "name": "App",
    "param": null,
    "propsUsed": Array [],
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "View",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Object {
            "data-uid": Object {
              "type": "ATTRIBUTE_VALUE",
              "value": "bbb",
            },
            "layout": Object {
              "content": Array [],
              "type": "ATTRIBUTE_NESTED_OBJECT",
            },
            "style": Object {
              "content": Array [
                Object {
                  "key": "left",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "type": "ATTRIBUTE_VALUE",
                    "value": 0,
                  },
                },
                Object {
                  "key": "top",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "type": "ATTRIBUTE_VALUE",
                    "value": 0,
                  },
                },
                Object {
                  "key": "width",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "type": "ATTRIBUTE_VALUE",
                    "value": 200,
                  },
                },
                Object {
                  "key": "height",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "type": "ATTRIBUTE_VALUE",
                    "value": 300,
                  },
                },
                Object {
                  "key": "position",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "type": "ATTRIBUTE_VALUE",
                    "value": "absolute",
                  },
                },
              ],
              "type": "ATTRIBUTE_NESTED_OBJECT",
            },
          },
          "type": "JSX_ELEMENT",
        },
      ],
      "name": Object {
        "baseVariable": "View",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Object {
        "data-uid": Object {
          "type": "ATTRIBUTE_VALUE",
          "value": "aaa",
        },
        "layout": Object {
          "type": "ATTRIBUTE_VALUE",
          "value": Object {},
        },
        "style": Object {
          "content": Array [
            Object {
              "key": "backgroundColor",
              "type": "PROPERTY_ASSIGNMENT",
              "value": Object {
                "type": "ATTRIBUTE_VALUE",
                "value": "#FFFFFF",
              },
            },
            Object {
              "key": "position",
              "type": "PROPERTY_ASSIGNMENT",
              "value": Object {
                "type": "ATTRIBUTE_VALUE",
                "value": "absolute",
              },
            },
          ],
          "type": "ATTRIBUTE_NESTED_OBJECT",
        },
      },
      "type": "JSX_ELEMENT",
    },
    "type": "UTOPIA_JSX_COMPONENT",
  },
]
`;

exports[`SWITCH_LAYOUT_SYSTEM switches from pins to flex correctly 1`] = `
Array [
  Object {
    "arbitraryJSBlock": null,
    "isFunction": true,
    "name": "App",
    "param": null,
    "propsUsed": Array [],
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "View",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Object {
            "data-uid": Object {
              "type": "ATTRIBUTE_VALUE",
              "value": "bbb",
            },
            "layout": Object {
              "content": Array [
                Object {
                  "key": "flexBasis",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "type": "ATTRIBUTE_VALUE",
                    "value": 200,
                  },
                },
                Object {
                  "key": "crossBasis",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "type": "ATTRIBUTE_VALUE",
                    "value": 300,
                  },
                },
              ],
              "type": "ATTRIBUTE_NESTED_OBJECT",
            },
            "style": Object {
              "content": Array [
                Object {
                  "key": "position",
                  "type": "PROPERTY_ASSIGNMENT",
                  "value": Object {
                    "type": "ATTRIBUTE_VALUE",
                    "value": "relative",
                  },
                },
              ],
              "type": "ATTRIBUTE_NESTED_OBJECT",
            },
          },
          "type": "JSX_ELEMENT",
        },
      ],
      "name": Object {
        "baseVariable": "View",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Object {
        "data-uid": Object {
          "type": "ATTRIBUTE_VALUE",
          "value": "aaa",
        },
        "layout": Object {
          "type": "ATTRIBUTE_VALUE",
          "value": Object {},
        },
        "style": Object {
          "content": Array [
            Object {
              "key": "backgroundColor",
              "type": "PROPERTY_ASSIGNMENT",
              "value": Object {
                "type": "ATTRIBUTE_VALUE",
                "value": "#FFFFFF",
              },
            },
            Object {
              "key": "display",
              "type": "PROPERTY_ASSIGNMENT",
              "value": Object {
                "type": "ATTRIBUTE_VALUE",
                "value": "flex",
              },
            },
          ],
          "type": "ATTRIBUTE_NESTED_OBJECT",
        },
      },
      "type": "JSX_ELEMENT",
    },
    "type": "UTOPIA_JSX_COMPONENT",
  },
]
`;
